@@ -1,0 +1,78 @@
+/* Copyright (c) 2002, 2007 Marek Michalkiewicz
+   Copyright (c) 2007  Dmitry Xmelkov
+   All rights reserved.
+
+   Redistribution and use in source and binary forms, with or without
+   modification, are permitted provided that the following conditions are met:
+
+   * Redistributions of source code must retain the above copyright
+     notice, this list of conditions and the following disclaimer.
+   * Redistributions in binary form must reproduce the above copyright
+     notice, this list of conditions and the following disclaimer in
+     the documentation and/or other materials provided with the
+     distribution.
+   * Neither the name of the copyright holders nor the names of
+     contributors may be used to endorse or promote products derived
+     from this software without specific prior written permission.
+
+  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+  AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+  IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+  ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+  LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+  CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+  SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+  INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+  CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+  ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+  POSSIBILITY OF SUCH DAMAGE. */
+
+/* $Id$ */
+
+#if !defined(__AVR_TINY__)
+
+#if !defined(__DOXYGEN__)
+
+#include "macros.inc"
+
+#define str_hh	r24
+#define str_hi	r23
+#define str_lo	r22
+
+#define val_lo	r20
+
+#define ret_hhi	r25
+#define ret_hlo	r24
+#define ret_hi  r23
+#define ret_lo  r22
+
+	ASSEMBLY_CLIB_SECTION
+	.global	_U(strchr_PF)
+	.type	_U(strchr_PF), @function
+_U(strchr_PF):
+	X_movw	ZL, str_lo
+	LPM_R0_ZPLUS_INIT str_hh
+1:
+	LPM_R0_ZPLUS_NEXT str_hh
+	cp	r0, val_lo
+	breq 2f
+	tst	r0
+	brne 1b
+  ; not found, return NULL pointer
+	X_movw	ret_lo, r0
+	X_movw	ret_hlo, r0
+	LPM_R0_ZPLUS_FINI
+	ret
+2:
+	sbiw	ZL, 1		; undo post-increment
+	sbci	ret_hlo, 0	; === str_hh
+	clr	ret_hhi		; always 0
+	X_movw	ret_lo, ZL
+	LPM_R0_ZPLUS_FINI
+	ret
+
+	.size	_U(strchr_PF), . - _U(strchr_PF)
+
+#endif /* not __DOXYGEN__ */
+
+#endif /* !defined(__AVR_TINY__) */
